[package]
name = "feedexnative"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "feedexnative"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
atom_syndication = { version = "0.12.1", features = ["with-serde"] }
rss = {version = "2.0.3", features = ["serde"], default-features = false}
rustler = "0.28.0"
serde_json = "1.0.96"

